fixed jumping titles in FF5

--- a/theme/_static/scrolls.css
+++ b/theme/_static/scrolls.css
@@ -165,6 +165,7 @@ section.documentation h4 a {
     margin-left:5px;
     text-align: left;
     text-decoration:none;
+    line-height:10px;
 }
 
 section.documentation h1:hover a,
